[package]
name = "pros-sys"
version = "3.8.1"
edition = "2021"

[features]
global_allocator = []

[build-dependencies]
bindgen = "0.68.1"
md-5 = "0.10"
reqwest = { version = "0.11", features = ["blocking"] }
zip = { version = "0.5", default-features = false, features = ["deflate"] }
hex-literal = "0.4.1"
